# IPC-RSVO

./: README.md  generateTraj1.py  generateTraj2.py  playPic.py
AddNoise_source_code/AddNoise/: AddNoiseToDataset.cpp  CMakeLists.txt  README.md
office/: CIE_tools.inc  combine.py  i_bookcase.inc  i_bookplacer_v2.inc  i_bottles.inc  i_chaise.inc  i_constr.inc  i_desks.inc  i_fluorceil.inc  i_frames.inc  lightsys.inc  meshlath.inc  object.rca  office.pov  office_backup.pov  office_depth.pov  office_rad_custom  office_test.pov  radiosity_41row_aa03.txt  render.py  render_combine_t1f1.py  render_combine_t1f2.py  render_combine_t1s1.py  render_combine_t2f1.py  render_combine_t2f2.py  render_combine_t2s1.py  run_record_xlab
office/motion_cam1/: t1_fast_cam1_frame_000001.txt  t1_fast_cam1_frame_000006.txt  t1_fast_cam1_frame_000007.txt  t1_fast_cam1_frame_000011.txt  t1_fast_cam1_frame_000012.txt  t1_fast_cam1_frame_000016.txt  t1_fast_cam1_frame_000017.txt  t1_fast_cam1_frame_000018.txt  t1_fast_cam1_frame_000019.txt  t1_fast_cam1_frame_000020.txt  t1_fast_cam1_frame_000023.txt  t1_fast_cam1_frame_000024.txt  t1_fast_cam1_frame_000025.txt  t1_fast_cam1_frame_000026.txt  t1_fast_cam1_frame_000027.txt  t1_fast_cam1_frame_000029.txt  t1_fast_cam1_frame_000030.txt  t1_fast_cam1_frame_000031.txt  t1_fast_cam1_frame_000033.txt  t1_fast_cam1_frame_000036.txt  t1_fast_cam1_frame_000040.txt  (+713 more)
testcases/: control_points.txt  generateControlPoints.py  generateSimple.py  saved_control_points.txt  saved_control_points1.txt  saved_control_points2.txt  saved_control_points3.txt
(+5366 files in other folders)
